[package]
name = "abjad-api"
version = "0.1.0"
edition = "2024"
authors = ["Theo Beers <tb3367@drexel.edu>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
abjad = "0.5.0"
console_error_panic_hook = { version = "0.1.7" }
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
