[package]
name = "abjad-api"
version = "0.1.0"
edition = "2024"
authors = ["Theo Beers <theodore@boot.dev>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
abjad = "0.6.0"
console_error_panic_hook = { version = "0.1.7" }
worker = { version = "0.7.4" }
worker-macros = { version = "0.7.4" }
